Anjin's found bug: Made names that are too long truncate

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,12 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 700;
 }
 
+.truncate {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 p {
 	padding: 0;
 	margin-bottom: 12px;
